--- a/modelo_copin/introducao.tex
+++ b/modelo_copin/introducao.tex
@@ -6,9 +6,7 @@ Nos últimos anos, fontes de informação colaborativa online têm adquirido a s
 
 Sabendo que o conteúdo destas comunidades de perguntas e respostas é criado por voluntários, estes sites são extremamente dependentes da adoção e contribuição de seus usuários. Assim como a variedade no conteúdo, a diversidade de visões de um certo assunto no conteúdo da comunidade também depende da diversidade dos usuários voluntários.
 
-% TODO: Quem tem este receio?
-A motivação inicial para este estudo foi um receio quanto à diversidade de gêneros ou \emph{gender gap}. Com o relatório de diversidade apresentado por grandes companhias como \emph{Google}~\cite{google:report} e \emph{Linkedin}~\cite{linkedin:report} mostrando que a proporção de mulheres em cargos de liderança é baixo, associamos logo às comunidades \emph{Open Source} que apresentam números parecidos~\cite{rustad2011suck}. Chegando, enfim, a comunidades de perguntas e respostas, como o \emph{StackExchange} onde resultados recentes mostram que mulheres são uma minoria extrema dentre os contribuidores do \emph{StackOverflow}~\cite{Vasilescu27092013}, a maior comunidade dentro da plataforma \emph{StackExchange}. Contudo, nota-se que pessoas que questionam a razão do \emph{gender gap} no \emph{StackOverflow} podem ser mal entendidas e até distratadas\footnote{http://is.gd/eAnI8R}.
-%TODO: Explicar o que tem neste link
+A motivação inicial para este estudo foi um receio por parte dos pesquisadores quanto à diversidade de gêneros ou \emph{gender gap} em comunidades online, principalmente àquelas relacionadas a \emph{STEM}. Com o relatório de diversidade apresentado por grandes companhias como \emph{Google}~\cite{google:report} e \emph{Linkedin}~\cite{linkedin:report} mostrando que a proporção de mulheres em cargos de liderança é baixo, associamos logo às comunidades \emph{Open Source} que apresentam números parecidos~\cite{rustad2011suck}. Chegando, enfim, a comunidades de perguntas e respostas, como o \emph{StackExchange} onde resultados recentes mostram que mulheres são uma minoria extrema dentre os contribuidores do \emph{StackOverflow}~\cite{Vasilescu27092013}, a maior comunidade dentro da plataforma \emph{StackExchange}. Contudo, nota-se que pessoas que questionam a razão do \emph{gender gap} no \emph{StackOverflow} podem ser mal entendidas e até distratadas\footnote{http://is.gd/eAnI8R}, tendo os outros membros o acusando de preconceituoso.
 
 Tais fatos coincidem com estereótipos comuns de mulheres em campos de \emph{STEM}~\cite{spencer1999stereotype} assim como a baixa influência que mulheres possuem em grupos que onde há homens e mulheres ~\cite{karpowitz2012gender}. Contudo, se mulheres realmente são influenciadas a contribuir menos que homens nestas comunidades, os sites do \emph{StackExchange} podem estar perdendo não só contribuidores de qualidade, mas também a oportunidade de produzir conteúdo que representa as visões de ambos os gêneros. Além de, ter um melhor funcionamento, sendo uma comunidade com grupos de gêneros distintos~\cite{marshall1975boys}.
 
@@ -16,9 +14,7 @@ Esta pesquisa tem como objetivo estudar as consequências de um usuário identif
 
 Apesar de estudos anteriores apontam que a fração de contribuidoras é bem menor do que a de contribuidores, não resta claro se mulheres tendem a, individualmente, contribuir menos, por menos tempo ou têm suas contribuições vistas como de menor qualidade pela comunidade. Estas observações podem nos orientar se estas comunidades são menos acolhedoras para contribuidoras e em que aspecto. Por outro lado, se mulheres não contribuem menos, por menos tempo nem tem seu conteúdo avaliado como de baixa qualidade, podemos deduzir que o objetivo de uma campanha de ampliação da diversidade nestas comunidades deve ter seu foco diferente de apenas convocar mulheres.
 
-%TODO: vindas = advindas ou provientes
-
-Nosso resultados mostram que, na maioria das comunidades estudadas, mulheres que expõem seu gênero no site, não só contribuem tanto quanto os homens, mas também têm suas contribuições vistas com o mesmo nível de qualidade e se dedicam ao site pelo mesmo período de tempo que os homens. Nas comunidades onde podemos verificar uma diferença significante entre as contribuições vindas dos dois gêneros, os padrões detectados vão de encontro com os estereótipos: na maioria das vezes, mulheres tendem a contribuir mais do que homens. Isto acontece até nas comunidades relacionadas a \emph{STEM}, inclusive na \emph{StackOverflow}, apesar de que, em nenhuma destas comunidades mulheres contribuem com mais respostas do que homens. Também conseguimos notar um crescimento na proporção de novos registros e contribuições vindas de mulheres em várias comunidades relacionadas a \emph{STEM}.
+Nosso resultados mostram que, na maioria das comunidades estudadas, mulheres que expõem seu gênero no site, não só contribuem tanto quanto os homens, mas também têm suas contribuições vistas com o mesmo nível de qualidade e se dedicam ao site pelo mesmo período de tempo que os homens. Nas comunidades onde podemos verificar uma diferença significante entre as contribuições advindas dos dois gêneros, os padrões detectados vão de encontro com os estereótipos: na maioria das vezes, mulheres tendem a contribuir mais do que homens. Isto acontece até nas comunidades relacionadas a \emph{STEM}, inclusive na \emph{StackOverflow}, apesar de que, em nenhuma destas comunidades mulheres contribuem com mais respostas do que homens. Também conseguimos notar um crescimento na proporção de novos registros e contribuições provenientes de mulheres em várias comunidades relacionadas a \emph{STEM}.
 
 Estes resultados questionam o senso comum de que mulheres são menos presentes em sites como os estudados porque suas contribuições podem não ser tão bem vindas quanto às dos homens. Em vez disso, os vários indicadores de contribuição que utilizamos mostram que mulheres que manifestam seu gênero, em geral, contribuem de maneira similar aos homens com a mesma característica. Estes resultados mostram comunidades de perguntas e respostas, e em particular àquelas com assuntos relacionados a \emph{STEM}, não são comunidades exclusivas para homens e necessitam de motivos alternativos para explicar o \textit{gender gap} nestes sites. A razão pode estar relacionada à falta de auto confiança no campo por parte das mulheres, como pode ser observado em outros sistemas~\cite{piazza:report}. Mais ainda, saber que mulheres que se engajam nestes sites são tão ativas quanto o que observamos sugere que o foco na campanha a favor da diversidade de gênero nestas comunidades deve ser no recrutamento e no engajamento inicial.
 
