--- a/modelo_copin/resultados.tex
+++ b/modelo_copin/resultados.tex
@@ -5,7 +5,7 @@
   \raggedleft
   % \includegraphics[width=1\columnwidth]{figures/questions_women.pdf}
   \includegraphics[width=1\columnwidth]{figures/test.pdf}
-  \caption[Comparação do número de perguntas]{Comparação do número de perguntas vindas de contribuidores de diferentes gêneros nos sites onde pode-se verificar uma diferença estatisticamente significante e mulheres contribuem mais do que homens. As caixas representam os quartis das distribuições enquanto os traços mostram o primeiro e nonagésimo nono percentis. Lembrando que o teste MWW pode achar diferença estatística na soma dos rankings mesmo que os quartis sejam similares nas duas amostras. Para visualizar a distribuição em escala de log o acrescentamos 1 ao valor original do número de contribuições realizadas por cada usuário. }~\label{figure:questions}
+  \caption[Comparação do número de perguntas]{Comparação do número de perguntas provenientes de contribuidores de diferentes gêneros nos sites onde pode-se verificar uma diferença estatisticamente significante e mulheres contribuem mais do que homens. As caixas representam os quartis das distribuições enquanto os traços mostram o primeiro e nonagésimo nono percentis. Lembrando que o teste MWW pode achar diferença estatística na soma dos rankings mesmo que os quartis sejam similares nas duas amostras. Para visualizar a distribuição em escala de log o acrescentamos 1 ao valor original do número de contribuições realizadas por cada usuário. }~\label{figure:questions}
 \end{figure}
 
 % This section presents the results for each of the four questions we address. When describing the differences in a variable for a set of sites, we use the notation $W/S/M$, with $W$ being the number of sites in which women had significantly higher values for that variable, $S$ the number of sites with no significant difference, and $M$ the number of sites in which men had significantly higher values.  
@@ -15,7 +15,7 @@ Este capítulo apresenta os resultados para cada uma das quatro perguntas de pes
 \section{Número de contribuições}
 % For all four types of contribution considered, a common pattern emerges in our results: the amount of contributions from men and women is not significantly different in the majority of sites (Mann-Whitney-Wilcoxon U significance tests, $\alpha = 0.05$). % [n] Show this result. TODO
 
-Para todos os tipos de contribuições considerados um padrão em comum surgiu em nossos resultados: a diferença da quantidade de contribuições vindas de homens e mulheres não é significativa na maioria dos sites (teste \emph{Mann-Whitney U}, $\alpha = 0.05$)
+Para todos os tipos de contribuições considerados um padrão em comum surgiu em nossos resultados: a diferença da quantidade de contribuições provenientes de homens e mulheres não é significativa na maioria dos sites (teste \emph{Mann-Whitney U}, $\alpha = 0.05$)
 
 % For all types of contribution, when there are differences in contribution levels, there is larger number of sites in which a typical women contributor is more active than sites in which men tend to contribute more. The difference in this number is the highest for questions ($21/62/2$), followed by answers ($18/56/11$) and all contributions combined ($10/73/2$). 
 
@@ -26,7 +26,7 @@ Dos sites em que pudemos observar uma diferença estatística significante, exis
   % \raggedleft
   % \includegraphics[width=1\columnwidth]{figures/answers_women.pdf}
   \includegraphics[width=1\columnwidth]{figures/test.pdf}
-  \caption[Comparação do número de respostas em comunidades onde mulheres respondem mais.]{Comparação do número de respostas vindas de contribuidores de diferentes gêneros nos sites onde pode-se verificar uma diferença estatisticamente significante e mulheres contribuem mais do que homens. As caixas representam os quartis das distribuições enquanto os traços mostram o primeiro e nonagésimo nono percentis. Lembrando que o teste MWW pode achar diferença estatística na soma dos rankings mesmo que os quartis sejam similares nas duas amostras. Para visualizar a distribuição em escala de log o acrescentamos 1 ao valor original do número de contribuições realizadas por cada usuário.}~\label{figure:answers}
+  \caption[Comparação do número de respostas em comunidades onde mulheres respondem mais.]{Comparação do número de respostas provenientes de contribuidores de diferentes gêneros nos sites onde pode-se verificar uma diferença estatisticamente significante e mulheres contribuem mais do que homens. As caixas representam os quartis das distribuições enquanto os traços mostram o primeiro e nonagésimo nono percentis. Lembrando que o teste MWW pode achar diferença estatística na soma dos rankings mesmo que os quartis sejam similares nas duas amostras. Para visualizar a distribuição em escala de log o acrescentamos 1 ao valor original do número de contribuições realizadas por cada usuário.}~\label{figure:answers}
 \end{figure}
 
 % Interestingly, the categories in which these differences happen differ for answers in contrast with the other types of contribution. For questions, comments, and all contributions combined, the communities where women are usually more active are related to \emph{STEM} categories. For questions, this distribution is $16/28/0$ for the \emph{STEM} sites, as seen in Figure~\ref{figure:questions}. In contrast, when considering answers, only three of the 18 sites in which women tend to answer more are \emph{STEM} sites (see Figure ~\ref{figure:answers}). Most often, sites in which women answer significantly more than men happen in the life-arts or professional categories. Also, two of the three \emph{STEM} sites in which women answer more are stereotypically associated with women: UX and Software Quality Assurance. The other way around, communities which men answer more than women can be seen on Figure~\ref{figure:answers-men}.
@@ -38,7 +38,7 @@ Interessante notar que existe uma diferença no padrão de categorias nas quais 
   \raggedleft
   % \includegraphics[width=1\columnwidth]{figures/answers_men.pdf}
   \includegraphics[width=1\columnwidth]{figures/test.pdf}
-  \caption[Comparação do número de respostas em comunidades onde homens respondem mais.]{Comparação do número de respostas vindas de contribuidores de diferentes gêneros nos sites onde pode-se verificar uma diferença estatisticamente significante e homens contribuem mais do que mulheres. As caixas representam os quartis das distribuições enquanto os traços mostram o primeiro e nonagésimo nono percentis. Lembrando que o teste MWW pode achar diferença estatística na soma dos rankings mesmo que os quartis sejam similares nas duas amostras. Para visualizar a distribuição em escala de log o acrescentamos 1 ao valor original do número de contribuições realizadas por cada usuário. }~\label{figure:answers-men}
+  \caption[Comparação do número de respostas em comunidades onde homens respondem mais.]{Comparação do número de respostas provenientes de contribuidores de diferentes gêneros nos sites onde pode-se verificar uma diferença estatisticamente significante e homens contribuem mais do que mulheres. As caixas representam os quartis das distribuições enquanto os traços mostram o primeiro e nonagésimo nono percentis. Lembrando que o teste MWW pode achar diferença estatística na soma dos rankings mesmo que os quartis sejam similares nas duas amostras. Para visualizar a distribuição em escala de log o acrescentamos 1 ao valor original do número de contribuições realizadas por cada usuário. }~\label{figure:answers-men}
 \end{figure}
 
 % These results point that women who engage with most sites we study and display their gender usually do not contribute significantly less than men. In fact, when there are differences, they are most often on the opposite direction. 
@@ -96,7 +96,7 @@ Com relação à frequência, um padrão diferente pode ser observado. Em todos 
 \section{Contribuições e registros ao longo do tempo}
 % For the dynamics of contributions coming from men and women, we see that in roughly a quarter of the sites, the fraction of contributions coming from women is increasing ($20/60/5$). Albeit less pronounced, for the communities where proportion of registrations from different genders have a significant trend over time, it happens more often that the number of registrations coming from women is increasing: $8/76/1$. Both of these trends are also stronger considering only \emph{STEM} sites: $16/25/3$ for contributions over time, and $6/38/0$ for proportion of new registrations.
 
-Observando as contribuições de homens e mulheres ao longo do tempo notamos que em, aproximadamente, um quarto dos sites estudados a proporção das contribuições vindas de mulheres está aumentando ($20/60/5$). Apesar de não tão evidente, das comunidades que apresentaram diferença estatística quanto aos registos feitos por homens e mulheres ao longo do tempo é possível ver um padrão: os registros de mulheres têm aumentado ($8/76/1$). Ambos resultados são mais visíveis se considerarmos apenas os sites relacionados a \emph{STEM}: $16/25/3$ para contribuições ao longo do tempo e $6/38/0$ para a proporção de novos registros.
+Observando as contribuições de homens e mulheres ao longo do tempo notamos que em, aproximadamente, um quarto dos sites estudados a proporção das contribuições provenientes de mulheres está aumentando ($20/60/5$). Apesar de não tão evidente, das comunidades que apresentaram diferença estatística quanto aos registos feitos por homens e mulheres ao longo do tempo é possível ver um padrão: os registros de mulheres têm aumentado ($8/76/1$). Ambos resultados são mais visíveis se considerarmos apenas os sites relacionados a \emph{STEM}: $16/25/3$ para contribuições ao longo do tempo e $6/38/0$ para a proporção de novos registros.
 
 \section{Focando nos maiores sites} %  DEixamos essa seção? Retirada.
 % The two largest sites of \emph{StackExchange} -- StackOverflow and SuperUser -- are much larger and older than the remainder sites in our data. Because they thus own a significant proportion of all \emph{StackExchange} users, we highlight their behavior. In both sites, there men have significantly longer lifetimes, and answers more questions. On the other hand, the proportion of new registrations coming from women has increased over time. 
@@ -112,7 +112,7 @@ Uma comparação do número de contribuições nos cinco maiores sites do \emph{
   % \raggedleft
   % \includegraphics[width=1\columnwidth]{figures/five-largest_quantity.pdf}
   \includegraphics[width=1\columnwidth]{figures/test.pdf}
-  \caption[Comparação do número de contribuições na 5 maiores comunidades.]{Comparação do número de contribuições vindas de usuários de diferentes gêneros nos cinco maiores sites (em quantidade de usuários) relacionados a \emph{STEM} do \emph{StackExchange}. As caixas representam os quartis das distribuições enquanto os traços mostram o primeiro e nonagésimo nono percentis.}~\label{figure:top-five}
+  \caption[Comparação do número de contribuições na 5 maiores comunidades.]{Comparação do número de contribuições provenientes de usuários de diferentes gêneros nos cinco maiores sites (em quantidade de usuários) relacionados a \emph{STEM} do \emph{StackExchange}. As caixas representam os quartis das distribuições enquanto os traços mostram o primeiro e nonagésimo nono percentis.}~\label{figure:top-five}
 \end{figure}
 % section conclusions (end)
 
