--- a/modelo_copin/revisao.tex
+++ b/modelo_copin/revisao.tex
@@ -1,8 +1,7 @@
 %!TEX root = main_mestrado.tex
 \chapter{Literatura}
 
-Baseado na psicologia dos gêneros, encontramos duas teorias principais para justificar a ausência de mulheres em campos relacionados à tecnologia: a Essencialista que vê as causas na biologia e o Constructo Social que vê as causas no meio, o qual é considerado \emph{male-friendly} mas não \emph{female-friendly}. Contudo, ainda é importante levar em consideração as diferenças individuais destas pessoas ao estudar esse \emph{gender gap}~\cite{trauth2004understanding}.
-%TODO colocar tradução de male friendly e female friendly
+Baseado na psicologia dos gêneros, encontramos duas teorias principais para justificar a ausência de mulheres em campos relacionados à tecnologia: a Essencialista que vê as causas na biologia e o Constructo Social que vê as causas no meio, o qual é considerado \emph{male-friendly} (propício aos homens) mas não \emph{female-friendly} (propício às mulheres). Contudo, ainda é importante levar em consideração as diferenças individuais destas pessoas ao estudar esse \emph{gender gap}~\cite{trauth2004understanding}.
 
 Nesta pesquisa estudamos gênero como fator social, como as pessoas se identificam, e não como fator biológico, portanto usaremos o termo "gênero" ao invés de "sexo". Também generalizamos e estudamos apenas os dois extremos do espectro: aqueles usuários que se identificam como homens e os que se identificam como mulheres. 
 
